# FaceDetection

./: CMakeLists.txt
lib/jsoncpp/lib/cmake/jsoncpp/: jsoncpp-targets-release.cmake  jsoncpp-targets.cmake
lib/jsoncpp/lib/pkgconfig/: jsoncpp.pc
project/: main.cpp
project/app/: app.cpp  app.h
project/faceDet/: CMakeLists.txt  faceDet.cpp  faceDet.h
test/: CMakeLists.txt  test.cpp
